[project]
name = "supportvectors"
version = "0.1.0"
description = "personal-use / complete monorepo for supportvectors project implementations in python"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name="Hammad Saeed", email="hammad@supportvectors.com"}
]

# llm/ai dependencies are standardized within the following libraries,
# all courses/projects use the same set of core dependencies.
dependencies = [
    "ollama>=0.6.1",
    "openai>=2.16.0",
    "pydantic-ai-slim>=1.50.0",
]

[project.optional-dependencies]
# !!!
# dependencies are structured by course/project, this repo
# aims to consolidate all dependencies for a given course in 
# a minimal fashion.
rag = [
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["sv"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    # indeed i prefer astral.sh's entire ecosystem in all my projects,
    # you should too!
    "ruff",
    "uv",
    "ty",
    # better jupyter!
    "marimo>=0.19.7",
]
